[package]
name = "csv_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"
erased-serde = "0.4"
serde = "1"
table_log = { git = "https://github.com/Banyc/table_log.git", rev = "26a3806ba29a2748c9e5b5b7bf1f75a0b417a898" }
tempfile = "3"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
